# lecture

./: .buildinfo  .copier-config.yaml  .copierignore  .envrc  .gitignore  .pre-commit-config.yaml  .tasks-extra.toml  .tasks.toml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  README.md  api.html  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.github/workflows/: deploy-docs.yaml  prerelease.yaml  release.yaml
_sources/: examples.ipynb  examples.md  index.md
_sources/about/: execution.md  lecture-bot.md
about/: cite.html  execution.html  index.html  lecture-bot.html
book/: _config.yml  _toc.yml  index.md  references.bib  requirements.txt
book/_static/: chatgpt.js  slide.css
book/about/: index.md
docs/: index.html
drafts/: carousel.md  images.md
lectures/aiart/: aiart.html  dalle1.html  dalle2.html  image2music.html  imagen.html  index.html  intro.html  lecture-disco.html  news.html  project-themes.html  robot_drawing.html  robot_drawings.html  text2music.html  textual-inversion.html  whisper.html
lectures/ds/: index.html
lectures/dsecon/: index.html
lectures/llms/: index.html
lectures/mlops/: age-gpg-ssh.html  auth-enc-sign.html  decsecops.html  dev-env.html  devops.html  devsecops.html  docker.html  dotfiles.html  github.html  gitops.html  grafana.html  index.html  intro.html  kubeflow.html  kubernetes.html  llmops.html  mlflow.html  pass.html  project.html  prometheus.html
lectures/nlp_advances/: camelids.html  detectGPT.html  gpt4.html  (+2 more)
scripts/: generate-slide-numbering.sh
(+624 files in other folders)
