[tool.poetry]
name = "lecture"
version = "0.1.1"
description = "Lecture notes for artifical intelligence courses taught at Cheju Halla University"
authors = ["Young Joon Lee <entelecheia@hotmail.com>"]
license = "CC-BY-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
python-semantic-release = "^7.33.1"
ekorpkit = "^0.1.40"

[tool.poetry.group.book.dependencies]
jupyter-book = "^0.13.2"
matplotlib = "^3.7.0"
numpy = "^1.24.2"
sphinx-inline-tabs = "^2022.1.2b11"
sphinx-proof = "^0.1.3"
sphinx-examples = "^0.0.5"
sphinx-hoverxref = "^1.3.0"
furo = ">2022.1.29"

[tool.black]
exclude = ['_version.py', 'node_modules', '_build', 'docs', 'tests', 'venv', '.copier-template', '.refs']

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.1"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "book/.version:VERSION={version}"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = false
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = false
hvcs = "github" # hosting version control system, gitlab is also supported
